Refactor borrow data Moving helpers to another folder Fix  bug in borrow page tracking when resize

--- a/public/stylesheets/style-lib.css
+++ b/public/stylesheets/style-lib.css
@@ -1,3 +1,12 @@
+* {
+    font-family: Roboto;
+}
+
+.no-padding-top-bot {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
 /* The sidebar menu */
 #side-bar {
     height: 100%; /* Full-height: remove this if you want "auto" height */
@@ -56,6 +65,8 @@
 #logo {
     width:200px;
     margin: 20px 0px;
+    max-width: initial;
+    max-height: initial;
 }
 
 .nav-current {
