--- a/views/layout-lib.hbs
+++ b/views/layout-lib.hbs
@@ -31,7 +31,7 @@
         <a class="nav-link" href="/librarian/borrow/">Mượn sách</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Trả sách</a>
+        <a class="nav-link" href="/librarian/return/">Trả sách</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/librarian/booking-manager">Quản lí mua sách</a>
@@ -40,10 +40,10 @@
         <a class="nav-link" href="/librarian/account-manager">Quản lí tài khoản</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Quản lí luật</a>
+        <a class="nav-link" href="/librarian/lib-law">Quản lí luật</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Đăng thông báo</a>
+        <a class="nav-link" href="/librarian/post-announcer/">Đăng thông báo</a>
       </li>
     </ul>
   </div>
@@ -78,8 +78,10 @@
       <span id="username">
         Tên tài khoản
       </span>
-      <img id="profile-picture" src="/images/blank-profile-picture.png" class="rounded-circle" alt="Ảnh đại diện"
-        width="40" height="40">
+      <a href="/librarian/lib-profile">
+        <img id="profile-picture" src="/images/blank-profile-picture.png" class="rounded-circle" alt="Ảnh đại diện"
+          width="40" height="40">
+      </a>
     </div>
   </div>
   <div id="main">
