--- a/views/lib-law.hbs
+++ b/views/lib-law.hbs
@@ -47,13 +47,13 @@
 
         </div>
         <div class="text-center " style="padding: 0 50px;">
-            <a href="/carts">
+            <a href="#">
                 <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">
                     <div style="width:8ch">Lưu lại</div>
                     
                     </button>
             </a>
-            <a href="/carts">
+            <a href="#">
                 <button class="customized-btn white-bg-black-text" style="padding: 5px 13px;">
                     <div style="width:8ch">Hủy</div>
                 </button>
