--- a/views/partials/return-table.hbs
+++ b/views/partials/return-table.hbs
@@ -1,11 +1,11 @@
 {{#each borrow.books}}
-<tr {{#if @first}}id="borrow-{{../borrow.id}}"{{/if}} {{#if_eq ../borrow.id ../activeID}}class="table-primary"{{/if_eq}}>
+<tr {{#if @first}}id="return-{{../borrow.id}}"{{/if}} {{#if_eq ../borrow.id ../activeID}}class="table-primary"{{/if_eq}}>
     {{#if @first}}
     <th scope="row" rowspan="{{../borrow.books.length}}">{{../borrow.id}}</th>
     {{/if}}
     <td>{{this.id}}</td>
     <td>
-        <a href="/librarian/book?id={{this.id}}&&activeID={{../borrow.id}}">
+        <a href="/librarian/book?id={{this.id}}&&activeID={{../borrow.id}}#borrow-{{../borrow.id}}">
             {{this.name}}
         </a>
     </td>
