--- a/views/return.hbs
+++ b/views/return.hbs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/stylesheets/borrow.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<div id="borrow-filter">
+<div id="return-filter">
     <div id="date-selector">
         <label for="date-input">Ngày</label>
         <div id="date-group" class="input-group input-group-sm">
@@ -11,30 +11,18 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="time-selector" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        </button>
-        <div id="time-list" class="dropdown-menu" aria-labelledby="time-selector">
-        </div>
-    </div>
-
     <button class="btn btn-sm btn-outline-primary" type="button" id="btn-now">
         Hiện tại
     </button>
-
-    
-    <button class="btn btn-sm btn-outline-secondary" type="button" id="btn-show-borrowed">
-        Hiện sách đã mượn
-    </button>
 </div>
 <hr>
-<div id = "borrow-view">
-    {{#eachBorrow borrowData}}
-    {{> borrow_card borrowInfo=. linkType="borrow"}}
-    {{/eachBorrow}}
+<div id = "return-view">
+    {{#eachReturn returnData}}
+    {{> borrow_card borrowInfo=. linkType="return"}}
+    {{/eachReturn}}
 </div>
     
 </div>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script src="/function/borrow.js"></script>
-<script src="/function/nav-lib.js" current_page="Mượn sách"></script>
+<script src="/function/return.js"></script>
+<script src="/function/nav-lib.js" current_page="Trả sách"></script>
