--- a/public/stylesheets/borrow.css
+++ b/public/stylesheets/borrow.css
@@ -2,7 +2,7 @@
     max-width: 550px;
 }
 
-#borrow-view {
+#return-view, #borrow-view {
     height: 100%;
     overflow-y: auto;
 }
@@ -13,7 +13,7 @@
     flex-direction: column;
 }
 
-#borrow-filter {
+#return-filter, #borrow-filter {
     display: flex;
     justify-content: space-evenly;
     align-items: flex-end;
