Chỉnh sửa tiếng anh, giao diện change password và thêm href
Như tiêu đề, chỉnh trong page change password, forget pass và profile.

--- a/views/forget-pass.hbs
+++ b/views/forget-pass.hbs
@@ -6,7 +6,7 @@
                     <div class="forget-pass padding-top-15-per">
                         <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Quên mật khẩu</span>
                         <div class="username">
-                            <input type="text" class="user-input" placeholder="Username">
+                            <input type="text" class="user-input" placeholder="Tên đăng nhập hoặc email">
                         </div>
                         <div class="forget-pass-but">
                             <a href="/">
