--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -28,10 +28,10 @@
             </div>
             {{!info area}}
             <div class="col-md-7">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" style="margin-bottom: 20px;">
                     <div>
                         <div style="font-size: 25px;">Họ tên: {{profile.name}}</div>
-                        <div style="font-size: 25px;">Username: {{profile.username}}</div>
+                        <div style="font-size: 25px;">Tài khoản: {{profile.username}}</div>
                         <div style="font-size: 25px;">Mã tài khoản: {{profile.usercode}} </div>
                         <div style="font-size: 25px;">QR Code: </div>
                         <div style="width: 300px; height:300px">
