--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -9,7 +9,7 @@
                             <input type="text" class="user-input" placeholder="Email sinh viên">
                         </div>
                         <div class="password">
-                            <input type="text" class="user-input" placeholder="password">
+                            <input type="text" class="user-input" placeholder="Mật khẩu">
                         </div>
                         <div class="sign-up-but">
                             <a href="/">
