--- a/views/change-password.hbs
+++ b/views/change-password.hbs
@@ -1,67 +1,46 @@
 <div class="container" style="padding:0; width:95%">
     <div class="content-section no-padding forget-pass-area  first-section">
-        <div class="row" style="padding: 50px 50px 100px 50px">
-            <div class="col-lg">
+        <div class="row justify-content-center" style="padding: 50px 50px 100px 50px">
+            <div>
                 <div class="account-area">
                     <div class="forget-pass padding-top-3em">
-                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB">Đổi mật khẩu</span>
-                        <div class="password">
-                            <input type="text" class="user-input" id = "current-pass" placeholder="password hiện tại">
-                        </div>
-
-                        <div class="password">
-                            <input type="text" class="user-input" id="new-password" placeholder="password mới">
-                        </div>
-                        
-                        <div class="password">
-                            <input type="text" class="user-input" id="confirm-password" placeholder="Xác nhận password">
-                        </div>
-
-                        <div class="confirm-area">
-                            <a href="/">
-                                <button class="confirm-button font-normal-bold">
-                                    <div style="width: 9ch;">Xác nhận</div>
-                                </button>
-                            </a>
-                            <a href="/">
-                                <button class="customized-btn font-normal-bold">
-                                    <div style="width: 9ch;">Hủy</div>
-                                </button>
-                            </a>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-            <div class="col-lg">
-                <div class="row justify-content-center">
-                    <div class="rectangle-ECF0F1 margin-top-5em text-algin-center">
-                        <div style="padding: 50px;">
+                        <span class="font-size-xxx-large font-normal-bold text-color-3498DB text-center">Đổi mật
+                            khẩu</span>
+                        <div class="row justify-content-center">
                             <div>
-                                {{!-- <div>Chỉ áp dụng cho tài khoản cntt </div> --}}
-                                <span class="text-color-3498DB font-normal-bold font-size-xx-large margin-top-3-per">Hoàn thành? Quay về trang chủ</span>
-                            </div>
-                            <div class="login">
-                                <a href="/" id = "index">
-                                    <button class="confirm-button font-normal-bold">Trang chủ</button>
-                                </a>
-
+                                <div class="password">
+                                    <input type="text" class="user-input" id="current-pass"
+                                        placeholder="Mật khẩu hiện tại">
+                                </div>
+                                <div class="password">
+                                    <input type="text" class="user-input" id="new-password" placeholder="Mật khẩu mới">
+                                </div>
+                                <div class="password">
+                                    <input type="text" class="user-input" id="confirm-password"
+                                        placeholder="Xác nhận mật khẩu mới">
+                                </div>
                             </div>
                         </div>
 
-
-
+                        <div class="row confirm-area justify-content-center" style="margin-top: 10px;">
+                            <div>
+                                <a href="/">
+                                    <button class="customized-btn blue-bg-white-text"
+                                        style="border:none; background-color: #3498db;">Xác nhận</button>
+                                </a>
+                                <a href="/">
+                                    <button class="customized-btn white-bg-black-text" style="padding: 5px 13px;">
+                                        <div style="width:8ch">Hủy</div>
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-
         </div>
-
     </div>
 </div>
-
 
 <link rel="stylesheet" href="/stylesheets/forget-pass.css">
 <script src="/function/change-nav.js" current_page="..."></script>
