Chỉnh sửa 1 số title không đồng nhất
Những trang này title font thin thay vì bold nên phải chỉnh lại.

--- a/views/account-manager.hbs
+++ b/views/account-manager.hbs
@@ -1,16 +1,11 @@
 <link rel="stylesheet" href="/stylesheets/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="bg-white container-fluid" style="width: 100%;">
-    <div class="display-flex ">
-        <div class="text-color-408CFF font-size-xx" style="flex: 0.95;">
-            Quản lý tài khoản
-        </div>
-
-        <div class="csv-area" style="float: right">
-            <div class="export-csv">
-                <i class="fa fa-table" aria-hidden="true"></i>Xuất file csv
-            </div>
-            <div class="input-csv"><i class="fa fa-table" aria-hidden="true"></i>Nhập từ file csv</div>
+    <div class="row  justify-content-between">
+        <div class="title-section text-left">Quản lý tài khoản</div>
+        <div class="text-right" style="padding-right: 10px; padding-top:20px">
+            <div> <img src="/images/icon-export.svg" alt=""> Xuất ra csv</div>
+            <div><img src="/images/icon-import.svg" alt=""> Nhập từ csv</div>
         </div>
     </div>
     <div class="search-area display-flex padding-top-3em ">
