--- a/views/buy-book-manager.hbs
+++ b/views/buy-book-manager.hbs
@@ -1,6 +1,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <div class="container-fluid first-section bg-white">
-    <div class="title font-size-xx text-center text-color-408CFF " style="padding: 2em 0;">Quản lý đặt sách</div>
+    <div class="title-section text-center" >Quản lý đặt sách</div>
 
     <div class="content-section d-flex justify-content-center bg-white no-padding align-items-center">
         <div id="" class="input-group col-6">
