--- a/views/lib-booking-book-manager.hbs
+++ b/views/lib-booking-book-manager.hbs
@@ -1,15 +1,10 @@
 <link rel="stylesheet" href="/stylesheets/style.css">
 <div class="bg-white container-fluid" style="width: 100%;">
-    <div class="display-flex ">
-        <div class="text-color-408CFF font-size-xx" style="flex: 0.95;">
-            Quản lý mua sách
-        </div>
-
-        <div class="csv-area" style="float: right">
-            <div class="export-csv">
-                <i class="fa fa-table" aria-hidden="true"></i>Xuất file csv
-            </div>
-            <div class="input-csv"><i class="fa fa-table" aria-hidden="true"></i>Nhập từ file csv</div>
+    <div class="row  justify-content-between">
+        <div class="title-section text-left">Quản lý mua sách</div>
+        <div class="text-right" style="padding-right: 10px; padding-top:20px">
+            <div> <img src="/images/icon-export.svg" alt=""> Xuất ra csv</div>
+            <div><img src="/images/icon-import.svg" alt=""> Nhập từ csv</div>
         </div>
     </div>
     <div class="search-area display-flex padding-top-3em ">
@@ -52,4 +47,4 @@
     <div style="padding-bottom: 3em;">
     </div>
 
-<script src="/function/nav-lib.js" current_page="Quản lí mua sách"></script>
+    <script src="/function/nav-lib.js" current_page="Quản lí mua sách"></script>
