--- a/views/post-announcer.hbs
+++ b/views/post-announcer.hbs
@@ -4,7 +4,7 @@
 <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
 
 <div class="container-fluid bg-white">
-    <div class="text-center text-color-408CFF font-size-xx">
+    <div class="title-section text-center">
         Đăng thông báo
     </div>
 
