--- a/views/buy-book.hbs
+++ b/views/buy-book.hbs
@@ -4,56 +4,50 @@
     <div style="width: 100%; text-align: center; padding: 2em 0;" class=" title-section font-size-xx text-color-408CFF">
         Đăng ký mua
         sách</div>
-    <div class="display-flex justify-content-center">
+    <div class="row justify-content-center">
         <div class="upload-img row">
             <input type="file" id="input-file" accept="image/png, image/jpeg" />
             <div id="img-area"></div>
         </div>
-        <div class="book-info col-xs-4 col-sm-4 col-md-4 col-lg-4" >
+        <div class="book-info  col-md-4 ml-md-4">
             <div>
                 <div>Tên sách</div>
                 <input type="text" name="book-name" id="book-name" class="text-box-size-100-per"
                     placeholder="Kỹ nghệ phần mềm">
             </div>
-
             <div class="padding-top-1em">
                 <div>Tác giả</div>
                 <input type="text" name="book-author" id="book-author" class="text-box-size-100-per"
                     placeholder="Lê Văn Phùng">
             </div>
-
             <div class="padding-top-1em">
                 <div>Tải bản lần thứ</div>
                 <input type="text" name="book-renumber" id="book-renumber" class="text-box-size-100-per"
                     placeholder="3">
             </div>
-
             <div class="padding-top-1em">
                 <div>Nhà xuất bản</div>
                 <input type="text" name="book-producer" id="book-producer" class="text-box-size-100-per"
                     placeholder="NXB trẻ">
             </div>
-
             <div class="padding-top-1em">
                 <div>Link tham khảo</div>
                 <input type="text" name="link-prove" id="link-prove" class="text-box-size-100-per"
                     placeholder="https://amazon.com/ky-nghe-phan-mem">
             </div>
-
             <div class="padding-top-1em">
                 <div>ISBN</div>
                 <input type="text" name="ISBN" id="ISBN" class="text-box-size-100-per" placeholder="0123456789">
             </div>
-            <div class="button-area display-flex padding-top-1em" style="padding-left: 10em;">
-                <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
-                    nhận</button>
-                <button class="customized-btn white-bg-black-text" style="padding: 5px 13px; margin-left:5px">
-                    <div style="width:8ch">Hủy</div>
-                </button>
-            </div>
+
         </div>
     </div>
-
+    <div class="padding-top-1em text-center">
+        <button class="customized-btn blue-bg-white-text" style="border:none; background-color: #3498db;">Xác
+            nhận</button>
+        <button class="customized-btn white-bg-black-text" style="padding: 5px 13px; margin-left:5px">
+            <div style="width:8ch">Hủy</div>
+        </button>
+    </div>
 </div>
-
 <script src="/function/upload.js"></script>
