fix rep and title

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -153,6 +153,10 @@ body {
     text-align: center;
 }
 
+.text-right {
+    text-align: right;
+}
+
 .borrow-button,
 .confirm-button,
 .cancel-button {
