--- a/views/account-manager.hbs
+++ b/views/account-manager.hbs
@@ -64,8 +64,8 @@
                     <th class="l-height-3">{{this.email}}</th>
                     <th class="l-height-3"> {{this.username}}</th>
                     <th class="l-height-3"> {{this.type}}</th>
-                    <th class="l-height-3"> {{this.book_left}}</th>
-                    <th class="l-height-3"> {{this.total}}</th>
+                    <th class="l-height-3 text-center"> {{this.book_left}}</th>
+                    <th class="l-height-3 text-center"> {{this.total}}</th>
                     <th class="l-height-3"> {{this.activate}}</th>
                 </tr>
 
