--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
+<link rel="stylesheet" href="/stylesheets/slick-here.css">
 <div class="container-fluid" style="padding:0; width:95%">
     <div class="content-section picture-search d-flex justify-content-center bg-white no-padding align-items-center">
         <div id="searchbar-in-picture" class="input-group col-8">
-
             <input type="text" class="form-control" placeholder="Tìm kiếm sách, tin tức, ..." aria-label="Username"
                 aria-describedby="basic-addon1">
             <div class="input-group-append">
@@ -44,7 +44,6 @@
                                 {{this}}
                             </a>
                         </li>
-
                         {{/each}}
                     </ul>
                 </div>
@@ -60,45 +59,27 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
         {{!Carousel book list}}
-        <div id="carousel_booklist" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                {{#each sectionSachHot.books}}
-                <div class="carousel-item {{#if @first}} active {{/if}} ">
-                    <a href="/book-detail" style="color: inherit;">
-                        <div class="row justify-content-around">
-                            {{#each this}}
-                            <div class="card col-md-2 col" style=" border:none;">
-                                <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap">
-                                <div class="card-body" style="padding:10px">
-                                    <p class="card-text" style="margin: 0;">
-                                        {{this.name}}
-                                    </p>
-                                    <p class="card-text">
-                                        {{this.author}}
-                                    </p>
-                                </div>
-                            </div>
-                            {{/each}}
-                        </div>
-                    </a>
+        <div class="slick-book-here">
+            {{#each sectionSachHot.books}}
+                {{#each this}}
+                <a href="/book-detail" style="color: inherit;">
+                <div class="card" style=" border:none;" >
+                    <img class="card-img-top" src={{this.thumbnail}} alt="Card image cap" >
+                    <div class="card-body" style="padding:10px">
+                        <p class="card-text" style="margin: 0;">
+                            {{this.name}}
+                        </p>
+                        <p class="card-text">
+                            {{this.author}}
+                        </p>
+                    </div>
                 </div>
-                {{/each}}
-            </div>
-            <a class="carousel-control-prev" href="#carousel_booklist" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel_booklist" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+                </a>
+                {{/each}}            
+            {{/each}}
         </div>
-
-
     </div>
-
     <div class="content-section bg-white no-padding">
         <div class="title-section text-center">{{sectionTinTuc.title}}</div>
         <div class="row">
@@ -107,7 +88,6 @@
                 <div class="d-flex justify-content-center">
                     {{#each sectionTinTuc.articles}}
                     {{#if @first}}
-
                     <div class="card" style="width: 220px; border:none;">
                         <a href="/news-detail">
                             <div class="card-body" style="padding:5px">
@@ -122,13 +102,9 @@
                                 style="padding-bottom: 20px;">
                         </a>
                     </div>
-
-
                     {{/if}}
                     {{/each}}
                 </div>
-
-
             </div>
             <div class="col-md">
                 <div class="d-flex justify-content-center">
@@ -156,11 +132,8 @@
                             <div class="text-right" style="color: #3498DB; font-weight:bold;">
                                 {{sectionTinTuc.more_news}}</div>
                         </a>
-
                     </div>
-
                 </div>
-
             </div>
             <div class="col-2"></div>
         </div>
