--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
-
+  <link rel="stylesheet" type="text/css" href="/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="/slick/slick-theme.css" />
+  
 </head>
 
 <body>
@@ -85,8 +87,12 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="/slick/slick.min.js"></script>
   <script src="/function/login-checking-type-and-loading.js"></script>
   <script src="/function/layout.js"></script>
+  <script src="/function/slick-here.js"></script>
 </body>
 
 </html>
