--- a/public/stylesheets/slick-here.css
+++ b/public/stylesheets/slick-here.css
@@ -3,6 +3,10 @@
     width:90%;
     margin:0px auto;
   }
+  .slick-nav-book-here{
+    width:90%;
+    margin:0px auto;
+  }
   .slick-slide{
     margin:10px;
     height: auto;
